force-app/main/default/objects/Partnership_Info__c/Partnership_Info__c.object-meta.xml
<CustomObject>
    <description>MSP Accout 하위의 파트너십 현황 정보</description>
    <label>Partnership Info</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Partnership Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partnership Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>