force-app/main/default/objects/Partnership_Info__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>고객사</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partnership Infos</relationshipLabel>
    <relationshipName>Partnership_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>