force-app/main/default/objects/Partnership_Info__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>계약 만료일(Date)</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>