force-app/main/default/objects/Partnership_Info__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>계약 시작일(Date)</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>