force-app/main/default/objects/Partnership_Info__c/fields/Partner_Grade__c.field-meta.xml
<CustomField>
    <fullName>Partner_Grade__c</fullName>
    <description>파트너 등급(Text)</description>
    <label>Partner Grade</label>
    <length>20</length>
    <type>Text</type>
</CustomField>