force-app/main/default/objects/Partnership_Info__c/fields/Partner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner Manager(User)</description>
    <label>Partner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partnership_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>