force-app/main/default/objects/Partnership_Info__c/fields/SDS_PDM__c.field-meta.xml
<CustomField>
    <fullName>SDS_PDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDS PDM(Employee__c)</description>
    <label>SDS PDM</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Partnership Infos</relationshipLabel>
    <relationshipName>Partnership_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>