force-app/main/default/objects/Partnership_Info__c/fields/SDS_SA__c.field-meta.xml
<CustomField>
    <fullName>SDS_SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDS SA(Employee__c)</description>
    <label>SDS SA</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Partnership Infos (SDS SA)</relationshipLabel>
    <relationshipName>Partnership_Infos1</relationshipName>
    <type>Lookup</type>
</CustomField>