force-app/main/default/objects/Partnership_Info__c/validationRules/Contract_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Date_Check</fullName>
    <active>true</active>
    <description>계약 만료일은 계약 시작일 이후로 지정해야 합니다.</description>
    <errorConditionFormula>IF(Contract_End_Date__c &gt;= Contract_Start_Date__c, FALSE, 
TRUE)</errorConditionFormula>
    <errorMessage>계약 만료일은 계약 시작일 이후로 지정해야 합니다.</errorMessage>
</ValidationRule>